[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qutree"
version = "0.0.0"
#licence-file = "LICENSE"
description = "plot Bloch Sphere Binary Tree"
keywords = ["QTI", "Python"]
classifiers = [
    "Development Status :: 1 - Planning", 
    "Intended Audience :: Developers",
    "Topic :: QTI", 
    "License :: OSI Approved :: MIT", 
    "Programming Language :: Python :: 3.7", 
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.6.9"
dependencies = [
    "Deprecated", 
    "numpy", 
    "matplotlib", 
    "qutip"
]

[[project.authors]]
name = "Alice Barthe"
email = "alice.barthe@cern.ch"

[project.license]
text = "MIT"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/alice4space/bbt"
Download = "https://github.com/alice4space/bbt/archive/${metadata:version}.tar.gz"

[project.optional-dependencies]
dev = [
    "pre-commit", 
    "commitizen",
    "nox",
    "mypy",
]
test = [
    "pytest", 
    "pytest-sugar", 
    "pytest-icdiff", 
    "pytest-cov", 
    "Flake8-pyproject",
]
doc = [
    "Sphinx", 
    "pydata-sphinx-theme", 
    "nox", 
    "nbsphinx", 
    "sphinx-copybutton",
    # to run the examples
    "ipython",
    "pennylane",
]

[tool.setuptools]
include-package-data = true

[commitizen]
changelog_file = "CHANGELOG.md"
tag_format = "$major.$minor.$patch$prerelease"
update_changelog_on_bump = true
version = "0.0.0"
version_files = ["pyproject.toml:version", "src/__init__.py:__version__"]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.coverage.run]
source = ["qutree"]

[tool.ruff]
ignore-init-module-imports = true
fix = true
select = ["E", "F", "W", "I", "D", "RUF"]
ignore = ["E501"]  # line too long | Black take care of it

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D"] # no docstring for the tests