[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qutree"
version = "0.1.1"
description = "plot Bloch Sphere Binary Tree"
keywords = ["QTI", "Python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.6.9"
dependencies = [
    "Deprecated",
    "numpy",
    "matplotlib",
    "qutip"
]

[[project.authors]]
name = "Alice Barthe"
email = "alice.barthe@cern.ch"

[project.license]
text = "MIT"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/alice4space/bbt"
Download = "https://github.com/alice4space/bbt/archive/${metadata:version}.tar.gz"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "commitizen",
    "nox",
    "mypy",
]
test = [
    "pytest",
    "pytest-sugar",
    "pytest-icdiff",
    "pytest-cov",
    "Flake8-pyproject",
]
doc = [
    "Sphinx<6",
    "pydata-sphinx-theme",
    "nox",
    "ipykernel", # for readthedocs
    "nbsphinx",
    "sphinx-copybutton",
    # to run the examples
    "ipython",
    "pennylane",
]
demo = [
    "ipython",
    "pennylane",
]

[tool.setuptools]
include-package-data = true
packages = ["qutree"]
license-files = ["LICENSE"]

[tool.commitizen]
changelog_file = "CHANGELOG.md"
tag_format = "v$major.$minor.$patch$prerelease"
update_changelog_on_bump = true
version = "0.1.1"
version_files = ["pyproject.toml:version", "qutree/__init__.py:__version__"]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.coverage.run]
source = ["qutree"]

[tool.ruff]
ignore-init-module-imports = true
fix = true
select = ["E", "F", "W", "I", "D", "RUF"]
ignore = [
    "E501",  # line too long | Black take care of it
    "D101",  # Missing docstring in public class | set in the __init__ method only
]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D"] # no docstring for the tests
